--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,13 @@
+source ~/.local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf
+
+set -g utf8
+set-window-option -g utf8 on
+
+set -sg escape-time 1
+
+set-option -g base-index 1
+setw -g pane-base-index 1
+
 # Set the prefix to ^A.
 unbind C-b
 set -g prefix ^A
@@ -78,28 +88,29 @@ bind l refresh-client
 # More straight forward key bindings for splitting
 unbind %
 bind | split-window -h
-bind v split-window -h
+#bind v split-window -h
 unbind '"'
 bind - split-window -v
 bind h split-window -v
 
 # History
-set -g history-limit 1000
+set -g history-limit 10000
 
 # Pane
 unbind o
 
 
 # Terminal emulator window title
-set -g set-titles on
-set -g set-titles-string '#S:#I.#P #W'
+#set -g set-titles on
+#set -g set-titles-string '#S:#I.#P #W'
 
-# Status Bar
-set -g status-bg black
-set -g status-fg white
-set -g status-interval 1
-set -g status-left '#[fg=green]#H#[default]'
-set -g status-right '#[fg=yellow]#(cut -d " " -f 1-4 /proc/loadavg)#[default] #[fg=cyan,bold]%Y-%m-%d %H:%M:%S#[default]'
+# set pane colors - hilight the active pane
+set-option -g pane-border-fg colour235 #base02
+set-option -g pane-active-border-fg colour240 #base01
+
+# colorize messages in the command line
+set-option -g message-bg black #base02
+set-option -g message-fg brightred #orange
 
 # Notifying if other windows has activities
 setw -g monitor-activity on
@@ -123,3 +134,32 @@ bind '"' choose-window
 
 # Color fix
 set -g default-terminal "screen-256color"
+
+set-option -s escape-time 1000
+
+######
+# Fixing stupid tmux copy/paste
+#
+#  With this setup: 
+#     ctrl-a esc to start visual copy mode
+#     move cursor to what you want copied
+#     press v
+#     move cursor to end of what you want copied
+#     press y
+#     switch to different pane or screen
+#     ctrl-a p to paste
+
+# First we set vi mode for sanity
+setw -g mode-keys vi
+
+# Escape key means start copy mode
+unbind [
+bind Escape copy-mode
+# v to start selection
+bind-key -t vi-copy 'v' begin-selection
+# y to do the copy (yank, like in vim)
+bind-key -t vi-copy 'y' copy-selection
+# [ is paste because I keep hitting p for previous
+bind [ paste-buffer
+
+
