--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,4 @@
-source ~/.local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf
+#source ~/.local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf
 
 set -g utf8
 set-window-option -g utf8 on
@@ -117,6 +117,12 @@ setw -g monitor-activity on
 set -g visual-activity on
 
 # Highlighting the active window in status bar
+
+set -g status-bg black
+set -g status-fg white
+set -g window-status-current-bg white
+set -g window-status-current-fg black
+set -g window-status-current-attr bold
 setw -g window-status-current-bg red
 
 # Clock
@@ -162,4 +168,21 @@ bind-key -t vi-copy 'y' copy-selection
 # [ is paste because I keep hitting p for previous
 bind [ paste-buffer
 
+# Arrow keys to resize
+bind-key -n C-Up resize-pane -U 2
 
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+#plugin configs
+set -g @resurrect-save-shell-history 'on'
+
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'git@github.com/user/plugin'
+# set -g @plugin 'git@bitbucket.com/user/plugin'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
