--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,5 @@
 #source ~/.local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf
 
-#set-window-option -g utf8 on
-
 set -sg escape-time 1
 
 set-option -g base-index 1
@@ -98,38 +96,31 @@ set -g history-limit 10000
 # Pane
 unbind o
 
-#----- Colors --------
+
+# Terminal emulator window title
+#set -g set-titles on
+#set -g set-titles-string '#S:#I.#P #W'
 
 # set pane colors - hilight the active pane
-set-option -g pane-border-style fg=white
-set-option -g pane-active-border-style fg=colour240
-set-option -g display-panes-colour white
-set-option -g display-panes-active-colour red
-set-option -g mode-style "fg=#ffd787,bg=#5f8700"
-set-option -g message-style "fg=black,bg=#8ae234"
+#set-option -g pane-border-fg colour235 #base02
+#set-option -g pane-active-border-fg colour240 #base01
 
 # colorize messages in the command line
-set-option -g message-style fg=black,bg=brightred 
-
-#-- status line
-set-option -g status-justify right
-set-option -g status-style fg=white,bg=black
-
-set-window-option -g window-status-style fg=white,bg=black
-set-window-option -g window-status-current-style fg=red,bg=black
-set-window-option -g window-status-format '#I:#{=15:window_name}#F'
-set-window-option -g window-status-current-format '#I:#W#F'
-
-#-------
-
-#------------ window settings
+#set-option -g message-bg black #base02
+#set-option -g message-fg brightred #orange
 
 # Notifying if other windows has activities
-set-window-option -g monitor-activity on
-set-option -g visual-activity on
-set-option -g visual-bell off
-set-option -g visual-silence on
+setw -g monitor-activity on
+set -g visual-activity on
 
+# Highlighting the active window in status bar
+
+set -g status-bg black
+set -g status-fg white
+#set -g window-status-current-bg white
+#set -g window-status-current-fg black
+#set -g window-status-current-attr bold
+#setw -g window-status-current-bg red
 
 # Clock
 setw -g clock-mode-colour green
@@ -145,12 +136,11 @@ unbind '"'
 bind '"' choose-window
 
 # Color fix
-set -g default-terminal "xterm-256color"
-set-window-option -g xterm-keys on
+set -g default-terminal "screen-256color"
 
 set-option -s escape-time 1000
 
-#------------
+######
 # Fixing stupid tmux copy/paste
 #
 #  With this setup: 
@@ -163,28 +153,27 @@ set-option -s escape-time 1000
 #     ctrl-a p to paste
 
 # First we set vi mode for sanity
-setw -g mode-keys vi
+#setw -g mode-keys vi
+set-window-option -g mode-keys vi
+
 # Escape key means start copy mode
+unbind [
 bind Escape copy-mode
 # v to start selection
-bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T vi-copy 'v' send-keys -X begin-selection
 # y to do the copy (yank, like in vim)
-bind-key -T copy-mode-vi y send-keys -X rectangle-toggle
+bind-key -T vi-copy 'y'  send-keys -X copy-selection
 # [ is paste because I keep hitting p for previous
-unbind [
 bind [ paste-buffer
-#------------
 
 # Arrow keys to resize
-bind-key  C-i resize-pane -U 10
-bind-key  C-k resize-pane -D 10
-bind-key  C-j resize-pane -L 10
-bind-key  C-l resize-pane -R 10
+bind-key -n C-Up resize-pane -U 2
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'Morantron/tmux-fingers'
 
 #plugin configs
 set -g @resurrect-save-shell-history 'on'
