--- a/tmux.conf
+++ b/tmux.conf
@@ -1,97 +1,116 @@
-#source ~/.local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf
+#-------- Basic Settings
 
-set -sg escape-time 1
-
-set-option -g base-index 1
+set -g default-terminal "screen-256color"
+set -as terminal-overrides ",xterm*:Tc"         # true color support
+set -g history-limit 10000                      # History
+set -g base-index 1
 setw -g pane-base-index 1
+set -g renumber-windows on                      # renumber windows on change
+set -g set-titles on                            # filename as terminal title
+set -g mouse off                                # enable mouse
+setw -g pane-border-style fg=white             # border on active pane
+setw -g pane-active-border-style fg=purple
+set-option -g status-justify centre             # center window names
+set -sg escape-time 0                           # vim mode delay fix
+set -g display-time 4000                        # tmux messages show for 4 secs
+setw -g aggressive-resize on                    # auto resize
 
-# Set the prefix to ^A.
+#-------- Status Bar
+set -g status-interval 1                        # update status bar more
+set -g status-bg black
+set -g status-fg white
+set -g status-left-length 150                   # more usable status bar space
+set -g status-right-length 150
+# hostname on status bar
+set -g status-left '#[fg=purple]#(whoami)@#(hostname)#[fg=default] |'
+# current path and running program in status bar
+#set-window-option -g window-status-current-format '#[fg=white] #{window_index} #[fg=green]#{pane_current_command} #[fg=blue]#(echo "#{pane_path}" | rev | cut -d'/' -f-3 | rev) #[fg=white]'
+set-window-option -g window-status-current-format '#[fg=lightblue]#[bg=purple][#{window_index}] #[fg=lightblue]#[bg=purple]#{window_name} '
+set-window-option -g window-status-format '#[fg=black]#[bg=grey][#{window_index}] #[fg=black]#{window_name} '
+set -g status-right '#[fg=purple]#{battery_icon_status}#{battery_percentage}  | %a %h-%d %H:%M #{tmux_mode_indicator}'
+setw -g clock-mode-colour green                 # Clock
+setw -g clock-mode-style 24
+
+
+#-------- Keybindings 
+
+# Remap Leader Key {
 unbind C-b
 set -g prefix ^A
 bind a send-prefix
+#}
+# Reload Config {
+  bind R source-file ~/.tmux.conf
+# }
 
-# Bind appropriate commands similar to screen.
-# lockscreen ^X x
-unbind ^X
-bind ^X lock-server
-unbind x
-bind x lock-server
+# Windows {
+  # split windows with/without split key
+  unbind %
+  unbind '"'
+  bind "|" split-window -h
+  bind "\\" split-window -fh
+  bind "-" split-window -v
+  bind "_" split-window -fv
+  # screen ^C c
+  unbind ^C
+  bind ^C new-window
+  unbind c
+  bind c new-window
+  # next n
+  unbind n
+  bind n next-window
+  # prev p
+  unbind p
+  bind p previous-window
+  # title A
+  unbind A
+  bind A command-prompt "rename-window %%"
+  # windows ^W w
+  unbind w
+  bind w list-windows
+  # kill K
+  unbind k
+  bind k confirm-before "kill-window"
+# }
+# Panes {
+  # remove created panes
+  #bind z break-pane -t :
+  #bind C-z kill-pane -a
+#  bind-key -T copy-mode-vi 'C-h' select-pane -L
+#  bind-key -T copy-mode-vi 'C-j' select-pane -D
+#  bind-key -T copy-mode-vi 'C-k' select-pane -U
+#  bind-key -T copy-mode-vi 'C-l' select-pane -R
+#  bind-key -T copy-mode-vi 'C-/' select-pane -l
+# }
 
-# screen ^C c
-unbind ^C
-bind ^C new-window
-unbind c
-bind c new-window
+# Misc {
+  #bind C-n switch-client -l                       # toggle between sessions
+  #set-window-option -g mode-keys vi              # old vim mode
+  set -g mode-keys vi                             # vim mode
+  # lockscreen ^X x
+  unbind ^X
+  bind ^X lock-server
+  unbind x
+  bind x lock-server
+  # detach ^D d
+  unbind ^D
+  bind ^D detach
+  # displays *
+  unbind *
+  bind * list-clients
+  # redisplay ^L l
+  unbind l
+  bind l refresh-client
+# }
 
-# detach ^D d
-unbind ^D
-bind ^D detach
 
-# displays *
-unbind *
-bind * list-clients
+# Copy Pasting {
+  # copy paste with clipboard
+  set-option -s set-clipboard on
+  bind P paste-buffer
+# }
 
-
-# next ^@ ^N sp n
-unbind ^@
-bind ^@ next-window
-unbind ^N
-bind ^N next-window
-unbind " "
-bind " " next-window
-unbind n
-bind n next-window
-
-# title A
-unbind A
-bind A command-prompt "rename-window %%"
-
-# other ^A
-unbind ^A
-bind ^A last-window
-
-# prev ^H ^P p ^?
-unbind ^H
-bind ^H previous-window
-unbind ^P
-bind ^P previous-window
-unbind p
-bind p previous-window
-unbind BSpace
-bind BSpace previous-window
-
-# windows ^W w
-unbind ^W
-bind ^W list-windows
-unbind w
-bind w list-windows
-
-# quit \
-unbind \
-bind \ confirm-before "kill-server"
-
-# kill K k
-unbind K
-bind K confirm-before "kill-window"
-unbind k
-bind k confirm-before "kill-window"
-
-# redisplay ^L l
-unbind ^L
-bind ^L refresh-client
-unbind l
-bind l refresh-client
-
-# More straight forward key bindings for splitting
-unbind %
-bind | split-window -h
-#bind v split-window -h
-unbind '"'
-bind - split-window -v
-bind h split-window -v
-
-# History
-set -g history-limit 10000
+#-----------
 
 # Pane
 unbind o
@@ -109,36 +128,13 @@ unbind o
 #set-option -g message-bg black #base02
 #set-option -g message-fg brightred #orange
 
-# Notifying if other windows has activities
-setw -g monitor-activity on
-set -g visual-activity on
 
-# Highlighting the active window in status bar
 
-set -g status-bg black
-set -g status-fg white
 #set -g window-status-current-bg white
 #set -g window-status-current-fg black
 #set -g window-status-current-attr bold
 #setw -g window-status-current-bg red
 
-# Clock
-setw -g clock-mode-colour green
-setw -g clock-mode-style 24
-
-
-# :kB: focus up
-unbind Tab
-unbind BTab
-
-# " windowlist -b
-unbind '"'
-bind '"' choose-window
-
-# Color fix
-set -g default-terminal "screen-256color"
-
-set-option -s escape-time 1000
 
 ######
 # Fixing stupid tmux copy/paste
@@ -154,7 +150,7 @@ set-option -s escape-time 1000
 
 # First we set vi mode for sanity
 #setw -g mode-keys vi
-set-window-option -g mode-keys vi
+#set-window-option -g mode-keys vi
 
 # Escape key means start copy mode
 unbind [
@@ -169,14 +165,24 @@ bind [ paste-buffer
 # Arrow keys to resize
 bind-key -n C-Up resize-pane -U 2
 
-# List of plugins
+# Plugins {
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'Morantron/tmux-fingers'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-battery'
+set -g @plugin 'tmux-plugins/tmux-sessionist'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'MunifTanjim/tmux-mode-indicator'
+set -g @plugin 'schasse/tmux-jump'
+set -g @plugin 'CrispyConductor/tmux-copy-toolkit'
+#set -g @plugin 'tmux-plugins/tmux-sensible'
+#set -g @plugin 'Morantron/tmux-fingers'
+# }
+
 
 #plugin configs
 set -g @resurrect-save-shell-history 'on'
+set -g @continuum-restore 'on'
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
